# deep-macrofin

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-doc.txt  requirements.txt  sitemap.xml  test.ipynb  test.py
.github/workflows/: ci-build-test.yaml  ci-build.yaml  ci-doc.yaml  ci-test.yaml
api/evaluations/: index.html
api/models/: index.html
api/pde_model/: index.html
api/pde_model_time_step/: index.html
api/utils/: index.html
deepMacroFin/: __init__.py  pde_model.py
deepMacroFin/evaluations/: __init__.py  conditions.py  constraint.py  endog_equation.py  equation.py  formula.py  hjb_equation.py  system.py
deepMacroFin/models/: agents.py  formula.py  learnable_var.py  model_utils.py
deep_macrofin/: __init__.py  event_handler.py  pde_model.py  pde_model_time_step.py  utils.py
deep_macrofin/evaluations/: __init__.py  comparators.py  conditions.py  constraint.py  endog_equation.py  equation.py  formula.py  hjb_equation.py  loss_compute_methods.py  system.py
deep_macrofin/models/: __init__.py  activation_types.py  deepset.py  derivative_utils.py  dgm.py  endogvars.py  learnable_var.py  model_utils.py  resnet.py
docs/: faq.md  index.md  usage.md  usage_timestep.md
docs/api/: evaluations.md  models.md  pde_model.md  pde_model_time_step.md  utils.md
ecomodels/: utils.py
ecomodels/models/: __init__.py  agents.py  derivative_utils.py  endogvars.py  learnable_var.py  model_types.py  model_utils.py
examples/: bs_hd.py  electric_problem.ipynb  quick_tests.ipynb  wavelet_activation.ipynb
examples/basic_examples/: basic_odes.ipynb  basic_odes2.ipynb  basic_pdes.ipynb  black_scholes.ipynb  black_scholes_rar.ipynb  burgers_equation.ipynb  constraint_system.ipynb  diffusion_equations.ipynb  function_approximation.ipynb  function_approximation_rar.ipynb  obstacle.ipynb  quasilinear_nonlinear.ipynb  system_ode.ipynb  system_ode2.ipynb  wave_helmholtz.ipynb
examples/decamps/: decamps_equity.ipynb
examples/initial_examples/: active_learning.py  basic_utils.py  loss_fun.csv  main_1D.py  pymacrofin_1D.py  simple_de1.py  simple_de2.py  simple_de4.py  test.py
examples/kan_examples/: 1d_problem_split_multkan.ipynb  basic_odes.ipynb  basic_odes2.ipynb
examples/macro_problems/: crysis_dynamics.ipynb  crysis_dynamics2.ipynb  ditella.ipynb  ditella2.ipynb  ditella_no_investment.ipynb  ditella_paper_params.ipynb  ditella_with_investment.ipynb  ditella_with_investment_adaptive_loss.ipynb  ditella_with_investment_adaptive_loss2.ipynb  ditella_with_investment_adaptive_loss4.ipynb  ditella_with_investment_adaptive_loss_soft_adapt.ipynb  ditella_with_investment_rar.ipynb  principal_agent.ipynb  problem1.ipynb  problem1_2.ipynb  problem1_3.ipynb  problem1_adaptive_loss.ipynb  tree_2.ipynb  tree_2_pymacrofin.ipynb  tree_2_ts.ipynb  tree_3_ts.ipynb  tree_model_better.ipynb
examples/paper_example/: 1d_problem.ipynb  base_ode.ipynb  diffusion_equations.ipynb  function_approximation.ipynb  log_utility.ipynb
examples/pymacrofin_eg/: 1d_problem.ipynb  1d_problem2.ipynb  1d_problem3.ipynb  1d_problem_baseline.ipynb  1d_problem_kan.ipynb  1d_problem_relu.ipynb  1d_problem_split.ipynb  1d_problem_system.ipynb  2d_problem.ipynb  2d_problem2.ipynb  2d_problem3.ipynb  2d_problem4.ipynb  2d_problem_adaptive_loss.ipynb  2d_problem_adaptive_loss2.ipynb  BruSan14_prop2.ipynb  (+2 more)
faq/: index.html
initial_examples/: README.md  main_1D.py  result_test.ipynb
models/: ode3-200-log.txt
search/: search_index.json
tests/: test_agents.py  test_import.py  test_pde_system.py  test_pde_system_batched.py
usage/: index.html
usage_timestep/: index.html
(+94 files in other folders)
