[tool.poetry]
name = "deep_macrofin"
version = "0.3.3"
description = "Deep neural network for solving continuous time economic models"
readme = "README.md"
license = "MIT"
authors = [
  "Yuntao Wu <winstonyt.wu@mail.utoronto.ca>",
  "Jiayuan Guo <flora.guo@mail.utoronto.ca>",
  "Zissis Poulos <zpoulos@gmail.com>",
  "Goutham Gopalakrishna <goutham.gopalakrishna@rotman.utoronto.ca>",
]
homepage = "https://github.com/rotmanfinhub/deep-macrofin"
repository = "https://github.com/rotmanfinhub/deep-macrofin"
documentation = "https://rotmanfinhub.github.io/deep-macrofin"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "<2"
pandas = "^2.2.3"
torch = "^2.5.1"
sympy = "^1.13.3"
pyDOE = "^0.3.8"
tqdm = "^4.67.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mkdocs = "^1.6.1"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
pymdown-extensions = "^10.12"
mkdocs-material = "^9.5.44"
mkdocs-material-extensions = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
