[tool.poetry]
name = "deep_macrofin"
version = "0.4.0"
description = "Deep neural network for solving continuous time economic models"
readme = "README.md"
license = "MIT"
authors = [
  "Yuntao Wu <winstonyt.wu@mail.utoronto.ca>",
  "Jiayuan Guo <flora.guo@mail.utoronto.ca>",
  "Zissis Poulos <zpoulos@gmail.com>",
  "Goutham Gopalakrishna <goutham.gopalakrishna@rotman.utoronto.ca>",
]
homepage = "https://github.com/rotmanfinhub/deep-macrofin"
repository = "https://github.com/rotmanfinhub/deep-macrofin"
documentation = "https://rotmanfinhub.github.io/deep-macrofin"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "<2"
pandas = "^2.2.2"
torch = "^2.3.0"
sympy = "^1.12"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mkdocs = "^1.6.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
pymdown-extensions = "^10.8.1"
mkdocs-material = "^9.5.28"
mkdocs-material-extensions = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
