[project]
name = "deep_macrofin"
version = "0.5.0"
description = "Deep neural network for solving continuous time economic models"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Yuntao Wu", email = "winstonyt.wu@mail.utoronto.ca"},
  {name = "Jiayuan Guo", email = "flora.guo@mail.utoronto.ca"},
  {name = "Zissis Poulos", email = "zpoulos@gmail.com"},
  {name = "Goutham Gopalakrishna", email = "goutham.gopalakrishna@rotman.utoronto.ca"},
]
requires-python = ">=3.9"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2.2",
  "torch>=2.3.0",
  "sympy>=1.12",
  "tqdm>=4.66.4",
  "matplotlib>=3.9.0",
  "scikit-learn>=1.3.2",
]

[project.urls]
Homepage = "https://github.com/rotmanfinhub/deep-macrofin"
Repository = "https://github.com/rotmanfinhub/deep-macrofin"
Documentation = "https://rotmanfinhub.github.io/deep-macrofin"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "mkdocs>=1.6.0",
  "mkdocs-git-revision-date-localized-plugin>=1.2.6",
  "pymdown-extensions>=10.8.1",
  "mkdocs-material>=9.5.28",
  "mkdocs-material-extensions>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]